//! Automated Trading Service
//! 
//! Provides advanced automated trading capabilities including:
//! - Portfolio rebalancing algorithms
//! - Risk management systems
//! - Automated yield farming strategies
//! - Advanced order types and execution
//! - Cross-chain arbitrage automation
//! - Market making strategies

use std::sync::Arc;
use std::collections::HashMap;
use tonic::{Request, Response, Status};
use tracing::{info, warn, error, instrument};
use uuid::Uuid;
use chrono::{DateTime, Utc};
use serde::{Deserialize, Serialize};
use rust_decimal::Decimal;

use crate::proto::fo3::wallet::v1::{
    automated_trading_service_server::AutomatedTradingService,
    *,
};
use crate::middleware::{
    auth::{AuthContext, AuthService},
    audit::AuditLogger,
    trading_guard::TradingGuard,
};
use crate::ml::{ModelManager, InferenceRequest};
use crate::error::ServiceError;

/// Automated trading service implementation
pub struct AutomatedTradingServiceImpl {
    auth_service: Arc<AuthService>,
    audit_logger: Arc<AuditLogger>,
    trading_guard: Arc<TradingGuard>,
    model_manager: Arc<ModelManager>,
    strategy_engine: Arc<StrategyEngine>,
    risk_manager: Arc<RiskManager>,
    execution_engine: Arc<ExecutionEngine>,
}

/// Trading strategy engine
pub struct StrategyEngine {
    active_strategies: Arc<tokio::sync::RwLock<HashMap<String, TradingStrategy>>>,
    strategy_configs: HashMap<String, StrategyConfig>,
}

/// Risk management system
pub struct RiskManager {
    risk_limits: RiskLimits,
    position_monitor: Arc<PositionMonitor>,
    exposure_calculator: Arc<ExposureCalculator>,
}

/// Order execution engine
pub struct ExecutionEngine {
    order_router: Arc<OrderRouter>,
    slippage_monitor: Arc<SlippageMonitor>,
    execution_analytics: Arc<ExecutionAnalytics>,
}

/// Trading strategy definition
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct TradingStrategy {
    pub strategy_id: String,
    pub strategy_type: StrategyType,
    pub name: String,
    pub description: String,
    pub status: StrategyStatus,
    pub config: StrategyConfig,
    pub performance: StrategyPerformance,
    pub risk_parameters: RiskParameters,
    pub created_at: DateTime<Utc>,
    pub updated_at: DateTime<Utc>,
}

/// Strategy types
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum StrategyType {
    PortfolioRebalancing,
    YieldFarming,
    Arbitrage,
    MarketMaking,
    MomentumTrading,
    MeanReversion,
    GridTrading,
    DollarCostAveraging,
}

/// Strategy status
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum StrategyStatus {
    Active,
    Paused,
    Stopped,
    Error,
    Backtesting,
}

/// Strategy configuration
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct StrategyConfig {
    pub target_assets: Vec<String>,
    pub allocation_weights: HashMap<String, f64>,
    pub rebalance_frequency: String, // "daily", "weekly", "monthly"
    pub rebalance_threshold: f64,
    pub max_position_size: f64,
    pub stop_loss_percentage: f64,
    pub take_profit_percentage: f64,
    pub max_slippage: f64,
    pub min_liquidity: f64,
    pub custom_parameters: HashMap<String, serde_json::Value>,
}

/// Strategy performance metrics
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct StrategyPerformance {
    pub total_return: f64,
    pub annualized_return: f64,
    pub sharpe_ratio: f64,
    pub max_drawdown: f64,
    pub win_rate: f64,
    pub profit_factor: f64,
    pub total_trades: u64,
    pub successful_trades: u64,
    pub average_trade_duration: f64,
    pub last_updated: DateTime<Utc>,
}

/// Risk parameters
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct RiskParameters {
    pub max_portfolio_risk: f64,
    pub max_single_position_risk: f64,
    pub max_correlation_exposure: f64,
    pub var_limit: f64, // Value at Risk
    pub max_leverage: f64,
    pub emergency_stop_loss: f64,
    pub risk_budget: f64,
}

/// Risk limits
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct RiskLimits {
    pub max_daily_loss: Decimal,
    pub max_position_size: Decimal,
    pub max_leverage: f64,
    pub max_correlation: f64,
    pub var_limit: Decimal,
    pub stress_test_threshold: f64,
}

/// Position monitoring
pub struct PositionMonitor {
    positions: Arc<tokio::sync::RwLock<HashMap<String, Position>>>,
}

/// Exposure calculator
pub struct ExposureCalculator {
    correlation_matrix: HashMap<String, HashMap<String, f64>>,
}

/// Order router
pub struct OrderRouter {
    exchange_connectors: HashMap<String, Arc<dyn ExchangeConnector>>,
    routing_algorithm: RoutingAlgorithm,
}

/// Slippage monitor
pub struct SlippageMonitor {
    slippage_history: Vec<SlippageData>,
    alert_threshold: f64,
}

/// Execution analytics
pub struct ExecutionAnalytics {
    execution_metrics: HashMap<String, ExecutionMetrics>,
}

/// Trading position
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Position {
    pub position_id: String,
    pub asset: String,
    pub quantity: Decimal,
    pub entry_price: Decimal,
    pub current_price: Decimal,
    pub unrealized_pnl: Decimal,
    pub realized_pnl: Decimal,
    pub position_type: PositionType,
    pub opened_at: DateTime<Utc>,
    pub last_updated: DateTime<Utc>,
}

/// Position types
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum PositionType {
    Long,
    Short,
    Neutral,
}

/// Exchange connector trait
#[async_trait::async_trait]
pub trait ExchangeConnector: Send + Sync {
    async fn place_order(&self, order: &Order) -> Result<OrderResult, TradingError>;
    async fn cancel_order(&self, order_id: &str) -> Result<(), TradingError>;
    async fn get_order_status(&self, order_id: &str) -> Result<OrderStatus, TradingError>;
    async fn get_balance(&self, asset: &str) -> Result<Decimal, TradingError>;
    async fn get_market_data(&self, symbol: &str) -> Result<MarketData, TradingError>;
}

/// Order definition
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Order {
    pub order_id: String,
    pub symbol: String,
    pub side: OrderSide,
    pub order_type: OrderType,
    pub quantity: Decimal,
    pub price: Option<Decimal>,
    pub time_in_force: TimeInForce,
    pub stop_price: Option<Decimal>,
    pub created_at: DateTime<Utc>,
}

/// Order sides
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum OrderSide {
    Buy,
    Sell,
}

/// Order types
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum OrderType {
    Market,
    Limit,
    StopLoss,
    TakeProfit,
    StopLossLimit,
    TakeProfitLimit,
}

/// Time in force
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum TimeInForce {
    GoodTillCanceled,
    ImmediateOrCancel,
    FillOrKill,
    GoodTillDate(DateTime<Utc>),
}

/// Order result
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct OrderResult {
    pub order_id: String,
    pub status: OrderStatus,
    pub filled_quantity: Decimal,
    pub average_price: Decimal,
    pub commission: Decimal,
    pub timestamp: DateTime<Utc>,
}

/// Order status
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum OrderStatus {
    Pending,
    PartiallyFilled,
    Filled,
    Canceled,
    Rejected,
    Expired,
}

/// Market data
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct MarketData {
    pub symbol: String,
    pub bid_price: Decimal,
    pub ask_price: Decimal,
    pub last_price: Decimal,
    pub volume_24h: Decimal,
    pub timestamp: DateTime<Utc>,
}

/// Routing algorithm
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum RoutingAlgorithm {
    BestPrice,
    MinimumSlippage,
    FastestExecution,
    SmartRouting,
}

/// Slippage data
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct SlippageData {
    pub order_id: String,
    pub expected_price: Decimal,
    pub executed_price: Decimal,
    pub slippage_bps: f64,
    pub timestamp: DateTime<Utc>,
}

/// Execution metrics
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ExecutionMetrics {
    pub average_slippage: f64,
    pub fill_rate: f64,
    pub execution_time_ms: f64,
    pub cost_basis: Decimal,
    pub total_volume: Decimal,
}

/// Trading errors
#[derive(Debug, thiserror::Error)]
pub enum TradingError {
    #[error("Insufficient balance: {asset}")]
    InsufficientBalance { asset: String },
    
    #[error("Risk limit exceeded: {limit_type}")]
    RiskLimitExceeded { limit_type: String },
    
    #[error("Order execution failed: {reason}")]
    OrderExecutionFailed { reason: String },
    
    #[error("Strategy not found: {strategy_id}")]
    StrategyNotFound { strategy_id: String },
    
    #[error("Invalid strategy configuration: {details}")]
    InvalidStrategyConfig { details: String },
    
    #[error("Market data unavailable: {symbol}")]
    MarketDataUnavailable { symbol: String },
    
    #[error("Exchange connection failed: {exchange}")]
    ExchangeConnectionFailed { exchange: String },
}

impl AutomatedTradingServiceImpl {
    /// Create a new automated trading service
    pub fn new(
        auth_service: Arc<AuthService>,
        audit_logger: Arc<AuditLogger>,
        trading_guard: Arc<TradingGuard>,
        model_manager: Arc<ModelManager>,
    ) -> Self {
        let strategy_engine = Arc::new(StrategyEngine::new());
        let risk_manager = Arc::new(RiskManager::new());
        let execution_engine = Arc::new(ExecutionEngine::new());

        Self {
            auth_service,
            audit_logger,
            trading_guard,
            model_manager,
            strategy_engine,
            risk_manager,
            execution_engine,
        }
    }

    /// Create a new trading strategy
    #[instrument(skip(self, request))]
    pub async fn create_strategy(&self, request: CreateStrategyRequest) -> Result<TradingStrategy, TradingError> {
        info!(strategy_type = ?request.strategy_type, "Creating new trading strategy");

        // Validate strategy configuration
        self.validate_strategy_config(&request.config).await?;

        // Create strategy
        let strategy = TradingStrategy {
            strategy_id: Uuid::new_v4().to_string(),
            strategy_type: self.parse_strategy_type(&request.strategy_type)?,
            name: request.name,
            description: request.description,
            status: StrategyStatus::Paused, // Start paused for safety
            config: self.parse_strategy_config(request.config)?,
            performance: StrategyPerformance::default(),
            risk_parameters: self.parse_risk_parameters(request.risk_parameters)?,
            created_at: Utc::now(),
            updated_at: Utc::now(),
        };

        // Store strategy
        self.strategy_engine.add_strategy(strategy.clone()).await?;

        info!(strategy_id = %strategy.strategy_id, "Trading strategy created successfully");
        Ok(strategy)
    }

    /// Start a trading strategy
    #[instrument(skip(self))]
    pub async fn start_strategy(&self, strategy_id: &str) -> Result<(), TradingError> {
        info!(strategy_id = %strategy_id, "Starting trading strategy");

        // Get strategy
        let mut strategy = self.strategy_engine.get_strategy(strategy_id).await?;

        // Perform pre-start checks
        self.risk_manager.validate_strategy_risk(&strategy).await?;
        
        // Update status
        strategy.status = StrategyStatus::Active;
        strategy.updated_at = Utc::now();

        // Store updated strategy
        self.strategy_engine.update_strategy(strategy).await?;

        // Start strategy execution
        self.strategy_engine.start_execution(strategy_id).await?;

        info!(strategy_id = %strategy_id, "Trading strategy started successfully");
        Ok(())
    }

    /// Stop a trading strategy
    #[instrument(skip(self))]
    pub async fn stop_strategy(&self, strategy_id: &str) -> Result<(), TradingError> {
        info!(strategy_id = %strategy_id, "Stopping trading strategy");

        // Get strategy
        let mut strategy = self.strategy_engine.get_strategy(strategy_id).await?;

        // Stop execution
        self.strategy_engine.stop_execution(strategy_id).await?;

        // Update status
        strategy.status = StrategyStatus::Stopped;
        strategy.updated_at = Utc::now();

        // Store updated strategy
        self.strategy_engine.update_strategy(strategy).await?;

        info!(strategy_id = %strategy_id, "Trading strategy stopped successfully");
        Ok(())
    }

    /// Execute portfolio rebalancing
    #[instrument(skip(self))]
    pub async fn rebalance_portfolio(&self, user_id: &str, target_allocation: HashMap<String, f64>) -> Result<RebalanceResult, TradingError> {
        info!(user_id = %user_id, "Executing portfolio rebalancing");

        // Get current portfolio
        let current_portfolio = self.get_current_portfolio(user_id).await?;

        // Calculate rebalancing trades
        let trades = self.calculate_rebalancing_trades(&current_portfolio, &target_allocation).await?;

        // Validate trades against risk limits
        for trade in &trades {
            self.risk_manager.validate_trade(trade).await?;
        }

        // Execute trades
        let mut executed_trades = Vec::new();
        let mut failed_trades = Vec::new();

        for trade in trades {
            match self.execution_engine.execute_trade(&trade).await {
                Ok(result) => executed_trades.push(result),
                Err(e) => {
                    error!(trade_id = %trade.order_id, error = %e, "Trade execution failed");
                    failed_trades.push((trade, e));
                }
            }
        }

        let rebalance_result = RebalanceResult {
            executed_trades,
            failed_trades: failed_trades.into_iter().map(|(trade, _)| trade).collect(),
            total_cost: Decimal::ZERO, // Calculate actual cost
            execution_time_ms: 0, // Calculate actual time
            success_rate: 0.0, // Calculate actual rate
        };

        info!(
            user_id = %user_id,
            executed_count = %rebalance_result.executed_trades.len(),
            failed_count = %rebalance_result.failed_trades.len(),
            "Portfolio rebalancing completed"
        );

        Ok(rebalance_result)
    }

    /// Validate strategy configuration
    async fn validate_strategy_config(&self, config: &serde_json::Value) -> Result<(), TradingError> {
        // Implement validation logic
        Ok(())
    }

    /// Parse strategy type from string
    fn parse_strategy_type(&self, strategy_type: &str) -> Result<StrategyType, TradingError> {
        match strategy_type {
            "portfolio_rebalancing" => Ok(StrategyType::PortfolioRebalancing),
            "yield_farming" => Ok(StrategyType::YieldFarming),
            "arbitrage" => Ok(StrategyType::Arbitrage),
            "market_making" => Ok(StrategyType::MarketMaking),
            "momentum_trading" => Ok(StrategyType::MomentumTrading),
            "mean_reversion" => Ok(StrategyType::MeanReversion),
            "grid_trading" => Ok(StrategyType::GridTrading),
            "dollar_cost_averaging" => Ok(StrategyType::DollarCostAveraging),
            _ => Err(TradingError::InvalidStrategyConfig {
                details: format!("Unknown strategy type: {}", strategy_type),
            }),
        }
    }

    /// Parse strategy configuration
    fn parse_strategy_config(&self, config: serde_json::Value) -> Result<StrategyConfig, TradingError> {
        // Implement parsing logic
        Ok(StrategyConfig {
            target_assets: vec!["BTC".to_string(), "ETH".to_string()],
            allocation_weights: HashMap::new(),
            rebalance_frequency: "daily".to_string(),
            rebalance_threshold: 0.05,
            max_position_size: 0.2,
            stop_loss_percentage: 0.1,
            take_profit_percentage: 0.2,
            max_slippage: 0.005,
            min_liquidity: 100000.0,
            custom_parameters: HashMap::new(),
        })
    }

    /// Parse risk parameters
    fn parse_risk_parameters(&self, params: serde_json::Value) -> Result<RiskParameters, TradingError> {
        // Implement parsing logic
        Ok(RiskParameters {
            max_portfolio_risk: 0.1,
            max_single_position_risk: 0.05,
            max_correlation_exposure: 0.3,
            var_limit: 0.02,
            max_leverage: 2.0,
            emergency_stop_loss: 0.2,
            risk_budget: 0.05,
        })
    }

    /// Get current portfolio
    async fn get_current_portfolio(&self, user_id: &str) -> Result<HashMap<String, Decimal>, TradingError> {
        // Implement portfolio retrieval logic
        Ok(HashMap::new())
    }

    /// Calculate rebalancing trades
    async fn calculate_rebalancing_trades(
        &self,
        current_portfolio: &HashMap<String, Decimal>,
        target_allocation: &HashMap<String, f64>,
    ) -> Result<Vec<Order>, TradingError> {
        // Implement rebalancing calculation logic
        Ok(Vec::new())
    }
}

/// Rebalance result
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct RebalanceResult {
    pub executed_trades: Vec<OrderResult>,
    pub failed_trades: Vec<Order>,
    pub total_cost: Decimal,
    pub execution_time_ms: u64,
    pub success_rate: f64,
}

/// Create strategy request
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct CreateStrategyRequest {
    pub strategy_type: String,
    pub name: String,
    pub description: String,
    pub config: serde_json::Value,
    pub risk_parameters: serde_json::Value,
}

impl StrategyEngine {
    fn new() -> Self {
        Self {
            active_strategies: Arc::new(tokio::sync::RwLock::new(HashMap::new())),
            strategy_configs: HashMap::new(),
        }
    }

    async fn add_strategy(&self, strategy: TradingStrategy) -> Result<(), TradingError> {
        let mut strategies = self.active_strategies.write().await;
        strategies.insert(strategy.strategy_id.clone(), strategy);
        Ok(())
    }

    async fn get_strategy(&self, strategy_id: &str) -> Result<TradingStrategy, TradingError> {
        let strategies = self.active_strategies.read().await;
        strategies.get(strategy_id)
            .cloned()
            .ok_or_else(|| TradingError::StrategyNotFound {
                strategy_id: strategy_id.to_string(),
            })
    }

    async fn update_strategy(&self, strategy: TradingStrategy) -> Result<(), TradingError> {
        let mut strategies = self.active_strategies.write().await;
        strategies.insert(strategy.strategy_id.clone(), strategy);
        Ok(())
    }

    async fn start_execution(&self, strategy_id: &str) -> Result<(), TradingError> {
        // Implement strategy execution logic
        Ok(())
    }

    async fn stop_execution(&self, strategy_id: &str) -> Result<(), TradingError> {
        // Implement strategy stopping logic
        Ok(())
    }
}

impl RiskManager {
    fn new() -> Self {
        Self {
            risk_limits: RiskLimits::default(),
            position_monitor: Arc::new(PositionMonitor::new()),
            exposure_calculator: Arc::new(ExposureCalculator::new()),
        }
    }

    async fn validate_strategy_risk(&self, strategy: &TradingStrategy) -> Result<(), TradingError> {
        // Implement risk validation logic
        Ok(())
    }

    async fn validate_trade(&self, trade: &Order) -> Result<(), TradingError> {
        // Implement trade validation logic
        Ok(())
    }
}

impl ExecutionEngine {
    fn new() -> Self {
        Self {
            order_router: Arc::new(OrderRouter::new()),
            slippage_monitor: Arc::new(SlippageMonitor::new()),
            execution_analytics: Arc::new(ExecutionAnalytics::new()),
        }
    }

    async fn execute_trade(&self, trade: &Order) -> Result<OrderResult, TradingError> {
        // Implement trade execution logic
        Ok(OrderResult {
            order_id: trade.order_id.clone(),
            status: OrderStatus::Filled,
            filled_quantity: trade.quantity,
            average_price: trade.price.unwrap_or_default(),
            commission: Decimal::ZERO,
            timestamp: Utc::now(),
        })
    }
}

impl PositionMonitor {
    fn new() -> Self {
        Self {
            positions: Arc::new(tokio::sync::RwLock::new(HashMap::new())),
        }
    }
}

impl ExposureCalculator {
    fn new() -> Self {
        Self {
            correlation_matrix: HashMap::new(),
        }
    }
}

impl OrderRouter {
    fn new() -> Self {
        Self {
            exchange_connectors: HashMap::new(),
            routing_algorithm: RoutingAlgorithm::SmartRouting,
        }
    }
}

impl SlippageMonitor {
    fn new() -> Self {
        Self {
            slippage_history: Vec::new(),
            alert_threshold: 0.01, // 1% slippage alert threshold
        }
    }
}

impl ExecutionAnalytics {
    fn new() -> Self {
        Self {
            execution_metrics: HashMap::new(),
        }
    }
}

impl Default for StrategyPerformance {
    fn default() -> Self {
        Self {
            total_return: 0.0,
            annualized_return: 0.0,
            sharpe_ratio: 0.0,
            max_drawdown: 0.0,
            win_rate: 0.0,
            profit_factor: 0.0,
            total_trades: 0,
            successful_trades: 0,
            average_trade_duration: 0.0,
            last_updated: Utc::now(),
        }
    }
}

impl Default for RiskLimits {
    fn default() -> Self {
        Self {
            max_daily_loss: Decimal::from(10000), // $10,000
            max_position_size: Decimal::from(100000), // $100,000
            max_leverage: 3.0,
            max_correlation: 0.7,
            var_limit: Decimal::from(5000), // $5,000
            stress_test_threshold: 0.05, // 5%
        }
    }
}
